force-app/main/default/objects/Matter__c/Matter__c.object-meta.xml
<CustomObject>
    <description>Custom object for tracking legal matters, cases, and related legal work</description>
    <label>Matter</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Matter</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>