force-app/main/default/objects/Matter__c/fields/Industry_Sector__c.field-meta.xml
<CustomField>
    <fullName>Industry_Sector__c</fullName>
    <label>Industry Sector</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Biofuels</fullName>
            </value>
            <value>
                <fullName>Carbon Markets</fullName>
            </value>
            <value>
                <fullName>Energy Transition</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>Renewable Energy</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>