force-app/main/default/objects/Matter__c/fields/Key_Stakeholders__c.field-meta.xml
<CustomField>
    <fullName>Key_Stakeholders__c</fullName>
    <label>Key Stakeholders</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>