force-app/main/default/objects/Matter__c/fields/Matter_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Matter_End_Date__c</fullName>
    <description>Date when the matter was completed/closed - used for matter duration analytics and completion tracking</description>
    <label>Matter End Date</label>
    <type>Date</type>
</CustomField>