force-app/main/default/objects/Matter__c/fields/Matter_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Matter_Start_Date__c</fullName>
    <description>Date when the matter was opened/intake completed - used for time series analytics and client relationship tracking</description>
    <label>Matter Start Date</label>
    <type>Date</type>
</CustomField>