force-app/main/default/objects/Matter__c/fields/Matter_Type__c.field-meta.xml
<CustomField>
    <fullName>Matter_Type__c</fullName>
    <label>Matter Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Corporate Transaction</fullName>
            </value>
            <value>
                <fullName>Energy Transition</fullName>
            </value>
            <value>
                <fullName>Environmental Law</fullName>
            </value>
            <value>
                <fullName>Investment Advisory</fullName>
            </value>
            <value>
                <fullName>Joint Venture</fullName>
            </value>
            <value>
                <fullName>Licensing</fullName>
            </value>
            <value>
                <fullName>Litigation</fullName>
            </value>
            <value>
                <fullName>Regulatory Compliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>