force-app/main/default/objects/Matter__c/fields/Practice_Area__c.field-meta.xml
<CustomField>
    <fullName>Practice_Area__c</fullName>
    <label>Practice Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Arbitration</fullName>
            </value>
            <value>
                <fullName>Banking and Finance</fullName>
            </value>
            <value>
                <fullName>Capital Markets</fullName>
            </value>
            <value>
                <fullName>Carbon Credits</fullName>
            </value>
            <value>
                <fullName>Competition and Antitrust</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Corporate Governance</fullName>
            </value>
            <value>
                <fullName>Cross-Border Transactions</fullName>
            </value>
            <value>
                <fullName>Employment and Labor</fullName>
            </value>
            <value>
                <fullName>Energy Practice</fullName>
            </value>
            <value>
                <fullName>Environmental Compliance</fullName>
            </value>
            <value>
                <fullName>Environment and Natural Resources</fullName>
            </value>
            <value>
                <fullName>Global Compliance and Investigations</fullName>
            </value>
            <value>
                <fullName>Health Care Practice</fullName>
            </value>
            <value>
                <fullName>Immigration</fullName>
            </value>
            <value>
                <fullName>Insurance Practice</fullName>
            </value>
            <value>
                <fullName>Intellectual Property and Technology</fullName>
            </value>
            <value>
                <fullName>Life Sciences Practice</fullName>
            </value>
            <value>
                <fullName>Litigation and Dispute Resolution</fullName>
            </value>
            <value>
                <fullName>Mergers and Acquisitions</fullName>
            </value>
            <value>
                <fullName>Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>Pensions, Benefits and Executive Compensation</fullName>
            </value>
            <value>
                <fullName>Privacy and Cybersecurity</fullName>
            </value>
            <value>
                <fullName>Private Equity Practice</fullName>
            </value>
            <value>
                <fullName>Public International Law</fullName>
            </value>
            <value>
                <fullName>Public Law</fullName>
            </value>
            <value>
                <fullName>Public Policy and Regulation</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Regulatory Licensing</fullName>
            </value>
            <value>
                <fullName>Renewable Energy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>