force-app/main/default/objects/Matter__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Matters</relationshipLabel>
    <relationshipName>Matters_Rel</relationshipName>
    <type>Lookup</type>
</CustomField>