force-app/main/default/objects/Matter__c/fields/Strategic_Themes__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Themes__c</fullName>
    <label>Strategic Themes</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Biofuels operations</fullName>
            </value>
            <value>
                <fullName>Brazil expansion</fullName>
            </value>
            <value>
                <fullName>Carbon offsets</fullName>
            </value>
            <value>
                <fullName>Cross-border investment</fullName>
            </value>
            <value>
                <fullName>Energy transition</fullName>
            </value>
            <value>
                <fullName>Environmental compliance</fullName>
            </value>
            <value>
                <fullName>Regulatory licensing</fullName>
            </value>
            <value>
                <fullName>Sustainability initiatives</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>