force-app/main/default/objects/Matter__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Acquisition</fullName>
            </value>
            <value>
                <fullName>Compliance Review</fullName>
            </value>
            <value>
                <fullName>Divestiture</fullName>
            </value>
            <value>
                <fullName>Expansion</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>Joint Venture</fullName>
            </value>
            <value>
                <fullName>Licensing</fullName>
            </value>
            <value>
                <fullName>Regulatory Filing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>