force-app/main/default/objects/Matter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Related_Account__c</columns>
    <columns>Industry_Sector__c</columns>
    <columns>Matter_Start_Date__c</columns>
    <columns>Matter_End_Date__c</columns>
    <columns>Matter_Status__c</columns>
    <columns>Practice_Area__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>