force-app/main/default/objects/Matter__c/listViews/My_Matters.listView-meta.xml
<ListView>
    <fullName>My_Matters</fullName>
    <columns>NAME</columns>
    <columns>Related_Account__c</columns>
    <columns>Industry_Sector__c</columns>
    <columns>Matter_Start_Date__c</columns>
    <columns>Matter_Status__c</columns>
    <columns>Practice_Area__c</columns>
    <columns>Primary_Jurisdiction__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Matter_Status__c</field>
        <operation>equals</operation>
        <value>Draft,In Progress,Open,Pending Client Response,Pending Review</value>
    </filters>
    <label>My Matters</label>
</ListView>